added express and added gitignore for files and node_modules

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "private": true,
   "dependencies": {
+    "express": "^4.17.1",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {},
